--- a/services/go-link/package.json
+++ b/services/go-link/package.json
@@ -1,12 +1,17 @@
 {
   "name": "go-link",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build.js"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.110",
+    "@types/node": "^18.11.19",
     "esbuild": "^0.17.5",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.264.0"
   }
 }
