--- a/services/go-link/package.json
+++ b/services/go-link/package.json
@@ -1,9 +1,8 @@
 {
   "name": "go-link",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.mjs"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.110",
