--- a/services/mordor/auth/package.json
+++ b/services/mordor/auth/package.json
@@ -2,13 +2,17 @@
   "name": "auth",
   "version": "1.0.0",
   "scripts": {
-    "build": "node build.mjs"
+    "build": "node build.mjs",
+    "test": "vitest run"
   },
   "dependencies": {
     "@aws-sdk/client-sso": "^3.319.0",
     "@aws-sdk/client-sso-oidc": "^3.319.0"
   },
   "devDependencies": {
-    "esbuild": "^0.17.5"
+    "@types/aws-lambda": "^8.10.110",
+    "@types/node": "^18.11.19",
+    "esbuild": "^0.17.5",
+    "vitest": "^0.30.1"
   }
 }
