--- a/services/mordor/auth/package.json
+++ b/services/mordor/auth/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.110",
     "@types/node": "^18.11.19",
+    "dotenv": "^16.0.3",
     "esbuild": "^0.17.5",
     "vitest": "^0.30.1"
   }
