--- a/services/mordor/app/package.json
+++ b/services/mordor/app/package.json
@@ -18,8 +18,5 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"@aws-sdk/client-sso-oidc": "^3.319.0"
-	}
+	"type": "module"
 }
