--- a/services/mordor/app/package.json
+++ b/services/mordor/app/package.json
@@ -21,5 +21,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@aws-sdk/client-dynamodb": "^3.264.0",
+		"@aws-sdk/lib-dynamodb": "^3.303.0"
+	}
 }
