--- a/services/beta/backend/package.json
+++ b/services/beta/backend/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.264.0"
+    "@aws-sdk/client-dynamodb": "^3.264.0",
+    "@aws-sdk/util-dynamodb": "^3.370.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.110",
