--- a/services/beta/app/package.json
+++ b/services/beta/app/package.json
@@ -12,6 +12,8 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@tailwindcss/typography": "^0.5.9",
+		"@types/marked": "^5.0.1",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.21",
 		"svelte": "^4.0.5",
@@ -21,5 +23,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"marked": "^5.1.1"
+	}
 }
