--- a/services/mordor/app/package.json
+++ b/services/mordor/app/package.json
@@ -25,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"@aws-sdk/client-dynamodb": "^3.405.0",
+		"@aws-sdk/client-sts": "^3.405.0",
 		"@aws-sdk/lib-dynamodb": "^3.405.0"
 	}
 }
