--- a/services/beta/backend/package.json
+++ b/services/beta/backend/package.json
@@ -1,14 +1,9 @@
 {
   "name": "beta-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build.mjs"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.405.0",
     "@aws-sdk/util-dynamodb": "^3.405.0"
